fixed too high z value, overlapped with modal barrier

--- a/wanikani-similar-kanji/css/wk_niai.css
+++ b/wanikani-similar-kanji/css/wk_niai.css
@@ -53,5 +53,5 @@
     -webkit-border-radius:50%;
     -moz-border-radius:50%;
     border-radius:50%;
-    z-index:999
+    z-index:99
 }
